--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
 <body>
     
- 
+    <div class="carosello">
+        
+    </div>
 
 
     <script type="text/javascript" src="JS/functions.js">
